# Gstreamer_Tutorial

./: CMakeLists.txt  basic-tutorial-5.c  main.cpp  original_beach.json  readme.md  temp.json  temp2.json  tutorial2.cpp  tutorial2_siav.cpp  tutorial_3.cpp  tutorial_6.cpp
